# huffman

./: Cargo.toml  README.md  TODO.md  makefile
.github/workflows/: rust.yml
benches/: criterion.rs
doc/: aliases.js  search-index.js  settings.html  source-files.js
doc/huffman/: all.html  fn.decode.html  fn.decode_to.html  fn.encode.html  fn.encode_to.html  index.html  sidebar-items.js
doc/huffman/bits/: fn.get_bit.html  fn.set_bit.html  index.html  sidebar-items.js  struct.BitWriter.html  struct.Biterator.html
doc/huffman/bits/bit_writer/: struct.BitWriter.html
doc/huffman/bits/biterator/: struct.Biterator.html
doc/huffman/bits/helpers/: fn.get_bit.html  fn.set_bit.html
doc/huffman/huffman_tree/: enum.HuffmanTree.html  index.html  sidebar-items.js
doc/implementors/core/clone/: trait.Clone.js
doc/implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
doc/implementors/core/fmt/: trait.Debug.js
doc/implementors/core/iter/traits/iterator/: trait.Iterator.js
doc/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
doc/implementors/serde/de/: trait.Deserialize.js
doc/implementors/serde/ser/: trait.Serialize.js
doc/implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
doc/src/huffman/: huffman_tree.rs.html  lib.rs.html
doc/src/huffman/bits/: bit_writer.rs.html  biterator.rs.html  helpers.rs.html  mod.rs.html
src/: bit_buffer.rs  bit_helpers.rs  biterator.rs  huffman_tree.rs  lib.rs  main.rs
src/bits/: bit_writer.rs  biterator.rs  helpers.rs  mod.rs
