[package]
name = "huffman"
version = "0.1.0"
authors = ["Rudi B. Svartveit <rudsvar@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "3.0.0-beta.2"
mktemp = "0.4.1"
log = "0.4"
stderrlog = "0.5.1"

[dev-dependencies]
rand = "0.8.3"
criterion = { version = "0.3.4", features = [ "html_reports" ] }

[[bench]]
name = "criterion"
harness = false

# For flamegraph
[profile.release]
debug = true
