[package]
name = "huffman"
version = "0.1.0"
authors = ["Rudi B. Svartveit <rudsvar@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
clap = { version = "3.1", features = ["derive"] }
mktemp = "0.4"
log = "0.4"
stderrlog = "0.5"

[dev-dependencies]
rand = "0.8"
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "criterion"
harness = false

# For flamegraph
[profile.release]
debug = true
