[package]
name = "huffman"
version = "0.1.0"
authors = ["Rudi B. Svartveit <rudsvar@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
clap = { version = "4.0.32", features = ["derive"] }
mktemp = "0.5.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[dev-dependencies]
rand = "0.8"
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "criterion"
harness = false

# For flamegraph
[profile.release]
debug = true
